# mutopp

./: Cargo.toml  README.md
data/: annotations.tsv  check-opps.R  cosmic-signature-spectra.tsv  counts.tsv  genes.gff3  get-cosmic.R  input.snv  opps.tsv  reference.fa  reference.fa.fai  so-terms.tsv  test.snv
demo/sample-snv/: .gitignore  Makefile  assess-importance-sample.r  assess.R  notes.txt
src/: constants.rs  gene.rs  libs.rs  main.rs  sample.rs  stats.rs  utils.rs
src/io/: mod.rs  snv.rs
src/mutation/: coding.rs  genomic.rs  mod.rs
src/seq/: coding.rs  genomic.rs  mod.rs
